triples: fix cardbutton dimensions so fit on mobile

--- a/Projects/triples/src/index.css
+++ b/Projects/triples/src/index.css
@@ -1,6 +1,7 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  margin-left: 15px;
+  margin-right: 0px;
 }
 
 ol, ul {
@@ -10,7 +11,7 @@ ol, ul {
 .board-row:after {
   clear: both;
   content: "";
-  display: table;
+  display: block;
 }
 
 .status {
@@ -24,11 +25,11 @@ ol, ul {
   font-size: 8px;
   font-weight: bold;
   /* line-height: 34px; */
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 15px;
+  margin-top: 15px;
   padding: 0;
-  height: 40px;
-  width: 100px;
+  height: 45px;
+  width: 96px;
   /* text-align: center; */
 }
 
